force-app/main/default/objects/RULconfigurations__c/RULconfigurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RUL configurations</label>
</CustomObject>