force-app/main/default/objects/RULconfigurations__c/fields/Default_Change_request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Default_Change_request_Approval__c</fullName>
    <label>Default Change request Approval</label>
    <type>Email</type>
</CustomField>