force-app/main/default/objects/RULconfigurations__c/fields/Due_Date_For_End_Year_Report__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_For_End_Year_Report__c</fullName>
    <label>Due Date For End Year Report</label>
    <type>Date</type>
</CustomField>