force-app/main/default/objects/RULconfigurations__c/fields/Due_Date_For_Planned_Activities__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_For_Planned_Activities__c</fullName>
    <label>Due Date For Planned Activities</label>
    <type>Date</type>
</CustomField>